// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatCoverageSummary should format summary when head and base coverage specified (with threshold) 1`] = `
"| Team  | Statements covered                                                      | Branches Covered | Functions covered | Lines Covered |
| ----- | ----------------------------------------------------------------------- | ---------------- | ----------------- | ------------- |
| Total | 23/30 (<div title=\\"Base coverage is: 50%\\">76.67% (+26.67% 🔼)</div> 🟡) |                  |                   |               |"
`;

exports[`formatCoverageSummary should format summary when head and base coverage specified (with threshold) 2`] = `
"| Team  | Statements covered                                                      | Branches Covered | Functions covered | Lines Covered |
| ----- | ----------------------------------------------------------------------- | ---------------- | ----------------- | ------------- |
| Total | 23/30 (<div title=\\"Base coverage is: 96.67%\\">76.67% (-20% 🔻)</div> 🔴) |                  |                   |               |"
`;

exports[`formatCoverageSummary should format summary when head and base coverage specified (with threshold) 3`] = `
"| Team  | Statements covered | Branches Covered | Functions covered | Lines Covered |
| ----- | ------------------ | ---------------- | ----------------- | ------------- |
| Total | 23/30 (76.67% 🔴)  |                  |                   |               |"
`;

exports[`formatCoverageSummary should format summary when head and base coverage specified (with threshold) 4`] = `
"| Team  | Statements covered | Branches Covered | Functions covered | Lines Covered |
| ----- | ------------------ | ---------------- | ----------------- | ------------- |
| Total | 29/30 (96.67% 🟢)  |                  |                   |               |"
`;

exports[`formatCoverageSummary should format summary when head and base coverage specified 1`] = `
"| Team  | Statements covered                                                      | Branches Covered | Functions covered | Lines Covered |
| ----- | ----------------------------------------------------------------------- | ---------------- | ----------------- | ------------- |
| Total | 23/30 (<div title=\\"Base coverage is: 50%\\">76.67% (+26.67% 🔼)</div> 🟡) |                  |                   |               |"
`;

exports[`formatCoverageSummary should format summary when head and base coverage specified 2`] = `
"| Team  | Statements covered                                                      | Branches Covered | Functions covered | Lines Covered |
| ----- | ----------------------------------------------------------------------- | ---------------- | ----------------- | ------------- |
| Total | 23/30 (<div title=\\"Base coverage is: 96.67%\\">76.67% (-20% 🔻)</div> 🟡) |                  |                   |               |"
`;
